--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,15 +14,15 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
         android:layout_marginTop="30dp"
+        android:layout_marginRight="50dp"
         android:fontFamily="@font/nunito_semibold"
         android:text="Create a new Accocunt"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp" />
 
-    <android.support.v4.widget.CircleImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/register_image_btn"
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -39,17 +39,17 @@
         android:layout_below="@+id/register_image_btn"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/input_background"
         android:ems="10"
         android:fontFamily="@font/nunito_semibold"
         android:hint="Name..."
         android:inputType="textPersonName"
-        android:paddingBottom="12dp"
         android:paddingLeft="25dp"
-        android:paddingRight="25dp"
         android:paddingTop="12dp"
+        android:paddingRight="25dp"
+        android:paddingBottom="12dp"
         android:textSize="16sp" />
 
     <EditText
@@ -59,17 +59,17 @@
         android:layout_below="@+id/register_name"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/input_background"
         android:ems="10"
         android:fontFamily="@font/nunito_semibold"
         android:hint="Email..."
         android:inputType="textEmailAddress"
-        android:paddingBottom="12dp"
         android:paddingLeft="25dp"
-        android:paddingRight="25dp"
         android:paddingTop="12dp"
+        android:paddingRight="25dp"
+        android:paddingBottom="12dp"
         android:textSize="16sp" />
 
     <EditText
@@ -79,17 +79,17 @@
         android:layout_below="@+id/register_email"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/input_background"
         android:ems="10"
         android:fontFamily="@font/nunito_semibold"
         android:hint="Password..."
         android:inputType="textPassword"
-        android:paddingBottom="12dp"
         android:paddingLeft="25dp"
-        android:paddingRight="25dp"
         android:paddingTop="12dp"
+        android:paddingRight="25dp"
+        android:paddingBottom="12dp"
         android:textSize="16sp" />
 
     <Button
@@ -99,8 +99,8 @@
         android:layout_below="@+id/register_password"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/input_background"
         android:text="Create a new Account"
         android:textAllCaps="false"
@@ -113,8 +113,8 @@
         android:layout_below="@+id/register_btn"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/border_button"
         android:text="Back to Login"
         android:textAllCaps="false"
