--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -9,14 +9,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff"
-        android:layout_margin="15dp">
+        android:layout_margin="15dp"
+        android:background="#ffffff">
 
-        <TextView
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/users_list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text="User Fragment" />
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
     </RelativeLayout>
     <!-- TODO: Update blank fragment layout -->
